unpackaged/main/default/objects/Campaign/fields/CFCR_Exclude_From_Campaign_Influence__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Exclude_From_Campaign_Influence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked this record will be excluded from Full Circle Campaign Influence Calculations</description>
    <inlineHelpText>When checked this record will be excluded from Full Circle Campaign Influence Calculations</inlineHelpText>
    <label>Exclude From Campaign Influence</label>
    <type>Checkbox</type>
</CustomField>