unpackaged/main/default/objects/Campaign/fields/CFCR_FCCRM_Campaign_Threshold__c.field-meta.xml
<CustomField>
    <fullName>CFCR_FCCRM_Campaign_Threshold__c</fullName>
    <description>Full Circle CRM Field. If used - this number is evaluated as part of the engagement threshold for a new campaign response. Negative values are supported to create responses that below the engagement threshold irrespective of the lead/contact engagement threshold.</description>
    <inlineHelpText>Full Circle CRM Field. If used - this number is evaluated as part of the engagement threshold for a new campaign response. Negative values are supported to create responses that below the engagement threshold irrespective of the lead/contact engagement th</inlineHelpText>
    <label>FCCRM Campaign Threshold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>