unpackaged/main/default/objects/Campaign/fields/Content_Level__c.field-meta.xml
<CustomField>
    <fullName>Content_Level__c</fullName>
    <label>Content Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intro</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>