unpackaged/main/default/objects/Campaign/fields/Evergreen__c.field-meta.xml
<CustomField>
    <fullName>Evergreen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This denotes that there is no date necessary for the campaign</description>
    <inlineHelpText>This denotes that there is no date necessary for the campaign</inlineHelpText>
    <label>Evergreen?</label>
    <type>Checkbox</type>
</CustomField>