unpackaged/main/default/objects/Campaign/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <label>Geo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>