unpackaged/main/default/objects/Campaign/fields/Intention__c.field-meta.xml
<CustomField>
    <fullName>Intention__c</fullName>
    <label>Intention</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>