unpackaged/main/default/objects/Campaign/fields/Localised__c.field-meta.xml
<CustomField>
    <fullName>Localised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Localised?</label>
    <type>Checkbox</type>
</CustomField>