unpackaged/main/default/objects/Campaign/fields/Marketo_Program_Link__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Program_Link__c</fullName>
    <label>Marketo Program Link</label>
    <type>Url</type>
</CustomField>