unpackaged/main/default/objects/Campaign/fields/Member_Count_for_Validation__c.field-meta.xml
<CustomField>
    <fullName>Member_Count_for_Validation__c</fullName>
    <description>This field is to prevent users who are not marketing users or admin from deleting users from the campaign.</description>
    <inlineHelpText>This field is to prevent users who are not marketing users or admin from deleting users from the campaign.</inlineHelpText>
    <label>Member Count for Validation</label>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>