unpackaged/main/default/objects/Campaign/fields/of_Detail_Records__c.field-meta.xml
<CustomField>
    <fullName>of_Detail_Records__c</fullName>
    <description>Counts the number of related Campaign Detail records associated with the Campaign. Used in Process Builder for automated processes.</description>
    <label># of Detail Records</label>
    <summaryForeignKey>Campaign_Details__c.Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>