unpackaged/main/default/objects/Campaign/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>What, if any, partner(s) with the campaign?</description>
    <label>Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>