unpackaged/main/default/objects/Campaign/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Day</fullName>
            </value>
            <value>
                <fullName>AMA</fullName>
            </value>
            <value>
                <fullName>Community Event</fullName>
            </value>
            <value>
                <fullName>Customer Advocacy Board</fullName>
            </value>
            <value>
                <fullName>Grafana</fullName>
            </value>
            <value>
                <fullName>Product Overview / Demo</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>User Story</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Updates Sign Up</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>