unpackaged/main/default/objects/Campaign/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>This is the title of the campaign</description>
    <inlineHelpText>This is the title of the campaign</inlineHelpText>
    <label>Title</label>
    <length>65</length>
    <required>true</required>
    <type>Text</type>
</CustomField>