unpackaged/main/default/objects/Campaign/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metrics</fullName>
            </value>
            <value>
                <fullName>Logs</fullName>
            </value>
            <value>
                <fullName>Observability</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Tracing</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>