unpackaged/main/default/objects/Campaign/validationRules/Slack_Channel_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Slack_Channel_Name</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Slack_Channel__c, "^|#[^ ]+$"))</errorConditionFormula>
    <errorDisplayField>Slack_Channel__c</errorDisplayField>
    <errorMessage>Must be empty or a valid slack channel name</errorMessage>
</ValidationRule>